# biOps

./: MD5  README  configure  configure.ac
R/: fft_filters.R  fft_funcs.R  jpeg.R  luts.R  morphologic.R  tiff.R
man/: biOps-package.Rd  imageType.Rd  imgAND.Rd  imgAdd.Rd  imgAverage.Rd  imgAverageShrink.Rd  imgBilinearRotate.Rd  imgBilinearScale.Rd  imgBlueBand.Rd  imgBlur.Rd  imgBoost.Rd  imgCanny.Rd  imgConvolve.Rd  imgCrop.Rd  imgCubicRotate.Rd  imgCubicScale.Rd  imgDecreaseContrast.Rd  imgDecreaseIntensity.Rd  imgDiffer.Rd  imgDifferenceEdgeDetection.Rd  imgDivide.Rd  imgFFTBandPass.Rd  imgFFTBandStop.Rd  imgFFTHighPass.Rd  imgFFTLowPass.Rd  imgFreiChen.Rd  imgGamma.Rd  imgGetRGBFromBands.Rd  imgGreenBand.Rd  imgHighPassFilter.Rd  imgHistogram.Rd  imgHomogeneityEdgeDetection.Rd  imgHorizontalMirroring.Rd  imgIncreaseContrast.Rd  imgIncreaseIntensity.Rd  imgKirsch.Rd  imgMarrHildreth.Rd  imgMaximum.Rd  imgMedianShrink.Rd  imgMultiply.Rd  (+45 more)
src/: Makevars  Makevars.in  Makevars.win  canny.c  config.h  convolution.c  crop.c  defs.h  jpegio.c  kmeans_kdtree.c  logics.c  luts.c  morphology.c  tiffio.c
